--- a/src/apps/properties/src/views/PropertiesList/PropertiesList.less
+++ b/src/apps/properties/src/views/PropertiesList/PropertiesList.less
@@ -1,3 +1,6 @@
 .Websites {
   padding: 0;
+  &.WebsiteCreate > div {
+    height: initial;
+  }
 }
